--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
     "popper": "^1.0.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "serve-favicon": "~2.0.1",
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
